fix tooltip going off screen

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -12,7 +12,7 @@
     background-color: #616161eb;
     padding: 0.25rem 0.5rem;
     border-radius: 4px;
-    font-size: 1rem;
+    font-size: max(1rem, 12px);
   }
 
   &:hover div {
